# phosphor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
assets/: README.md
cmake/: CompileShaders.cmake  FetchDependencies.cmake  FindAftermathSDK.cmake
shaders/common/: bindless.glsl  brdf.glsl  math.glsl  packing.glsl  types.glsl
shaders/culling/: hiz_build.comp.glsl  hiz_cull.comp.glsl
shaders/debug/: debug_overlay.frag.glsl  debug_overlay.vert.glsl  simple.frag.glsl  simple.vert.glsl
shaders/gi/: ddgi_probe_trace.rchit.glsl  ddgi_probe_trace.rgen.glsl  ddgi_probe_trace.rmiss.glsl  ddgi_probe_update_irradiance.comp.glsl  ddgi_probe_update_visibility.comp.glsl  ddgi_sample.glsl
shaders/lighting/: restir_candidates.comp.glsl  restir_shade.comp.glsl  restir_spatial.comp.glsl  restir_temporal.comp.glsl
shaders/mesh/: meshlet.mesh.glsl  meshlet.task.glsl  meshlet_shadow.mesh.glsl  meshlet_shadow.task.glsl
shaders/post/: fxaa.comp.glsl  taa.comp.glsl  tonemap.comp.glsl
shaders/visibility/: material_resolve.comp.glsl  visibility.frag.glsl
src/: main.cpp
src/core/: engine.cpp  engine.h  input.cpp  input.h  log.h  timer.cpp  timer.h  types.h  window.cpp  window.h
src/diagnostics/: aftermath.cpp  aftermath.h  breadcrumbs.cpp  breadcrumbs.h  debug_overlay.cpp  debug_overlay.h  debug_printf.cpp  debug_printf.h  debug_utils.cpp  debug_utils.h  frame_stats.cpp  frame_stats.h  gpu_profiler.cpp  gpu_profiler.h  renderdoc_capture.cpp  renderdoc_capture.h  resource_tracker.cpp  resource_tracker.h  tracy_integration.cpp  tracy_integration.h  validation.cpp  validation.h
src/imgui/: imgui_layer.cpp  imgui_layer.h  ui_panels.cpp  ui_panels.h
src/render_graph/: barrier_builder.cpp  barrier_builder.h  render_graph.cpp  render_graph.h  render_pass.h  resource_registry.cpp  resource_registry.h
src/renderer/: aa_pass.cpp  aa_pass.h  composite_pass.cpp  composite_pass.h  ddgi_pass.cpp  ddgi_pass.h  frame_context.cpp  frame_context.h  gpu_scene.cpp  gpu_scene.h  hiz_pass.cpp  hiz_pass.h  material_resolve.cpp  material_resolve.h  mesh_pass.cpp  mesh_pass.h  meshlet_builder.cpp  meshlet_builder.h  push_constants.h  restir_pass.cpp  restir_pass.h  shadow_pass.cpp  shadow_pass.h  simple_pass.cpp  simple_pass.h  tonemap_pass.cpp  tonemap_pass.h  visibility_buffer.cpp  visibility_buffer.h
src/rhi/: vk_allocator.cpp  vk_allocator.h  vk_commands.cpp  vk_commands.h  vk_common.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_pipeline.cpp  vk_pipeline.h  vk_rt.cpp  vk_rt.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_sync.h
src/scene/: camera.cpp  camera.h  ecs.cpp  (+8 more)
(+16 files in other folders)
